authentication JWT, connection to database Mysql

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 {
     "server_address":"127.0.0.1",
-    "server_port":33
+    "server_port":33,    
+    "db_host" : "127.0.0.1",
+    "db_port": 3306,
+    "db_user" : "root", 
+    "db_password": "test",
+    "db_schema": "test_dart"    
 }
