--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   args: ^2.0.0
+  dart_jsonwebtoken: ^2.7.1
+  mysql1: ^0.20.0
   shelf: ^1.1.0
   shelf_router: ^1.0.0
 
