Authentication JWT /login Route

--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@
     "db_port": 3306,
     "db_user" : "root", 
     "db_password": "test",
-    "db_schema": "test_dart"    
+    "db_schema": "test_dart",
+    "jwtkey": "dart_project_test"
 }
