--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   args: ^2.0.0
   dart_jsonwebtoken: ^2.7.1
   mysql1: ^0.20.0
+  password_dart: ^2.0.1
   shelf: ^1.1.0
   shelf_router: ^1.0.0
 
