jwt authentication, adjusment package version

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@
     "db_user" : "root", 
     "db_password": "test",
     "db_schema": "test_dart",
-    "jwtkey": "dart_project_test"
+    "jwt_key": "dartprojecttest"
 }
