Method GET retrieving data from MySQL database

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 {
     "server_address":"127.0.0.1",
     "server_port":33,    
-    "db_host" : "127.0.0.1",
+    "db_host" : "localhost",
     "db_port": 3306,
     "db_user" : "root", 
     "db_password": "test",
-    "db_schema": "test_dart",
+    "db_schema": "dart_api",
     "jwt_key": "dartprojecttest"
 }
